--- a/src/views/user/signup.hbs
+++ b/src/views/user/signup.hbs
@@ -16,7 +16,7 @@
                             <input type="password" class="form-control" name="password" placeholder="Password">
                            </div>
                            <div class="form-group">
-                         <input type="Password" class="form-control" name="password" placeholder="comfirm password">
+                         <input type="Password" class="form-control" name="confirm_password" placeholder="comfirm password">
                         </div>
                        <button class="btn btn-primary btn-block">
                         Signup
