--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -13,10 +13,22 @@
           <a class="nav-link " href="/about">About</a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a href="/users/signin" class="nav-link">Login</a>
+      
+               <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item " href="/notes/add">Add Note</a></li>
+            <li><a class="dropdown-item" href="/notes">All-Notes</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
+          </ul>
         </li>
+             <li class="nav-item">
+             <a href="/users/signin" class="nav-link">Login</a>
+           </li>
           <li class="nav-item">
           <a href="/users/signup" class="nav-link">Register</a>
         </li>
